# design-pattern-in-rust

./: .gitignore  Cargo.toml  Readme.md  config.json
benckmark/: Cargo.toml
benckmark/benches/: benchmark.rs
data/: trips.txt
design-pattern/: Cargo.toml
examples/: Cargo.toml
examples/src/: begin_code.rs  fsm.rs  lib.rs  log_parser.rs  main.rs  nom_parser.rs  player.rs  state.rs  transaction.rs  trip.rs  weather_fsm.rs  weather_nom.rs
hexagonal-architecture/: Cargo.toml  hexarch.db
hexagonal-architecture/migrations/: 20251019123923_create-authors-table.sql
hexagonal-architecture/src/lib/: config.rs  routes.rs
