[workspace]
members = ["examples", "benckmark", "design-pattern", "hexagonal-architecture"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
chrono = "0.4.38"
cursive = "0.20.0"
nom = "7.1.3"
bytes = "1.6.1"
dateparser = "0.2.1"
regex = "1.10.5"
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.100"
config = "0.15.18"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = ["trace", "tracing"] }
tracing = "0.1.41"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
envy = "0.4.2"
dotenvy = "0.15.7"
